# FinalSoftware2

./: .gitignore  .pre-commit-config.yaml  README.md  agenda.py  cypress.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: gha_test.yml
CapaDatos/: database.py
CapaNegocio/: email.py  routeAgent.py  whatsapp.py
CapaPresentacion/: app.py  main.py  test_import.py
CapaPresentacion/templates/: index.html
Finalsoftware2/: README.md
agents/: langchain_agents.py  langchain_executor.py  langchain_tools.py
cypress/e2e/: app.cy.js
test/: README.md  test_E2E.py  test_agenda.py  test_database.py  test_models.py
